fixes spacing on hamburger menu

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,7 +24,6 @@ $bp-largest: 87.5em; //1400px
 $bp-large: 75em; //1200px
 $bp-medium: 56.25em; //900px
 $bp-small: 37.5em; //600px
-$bp-smallest: 31.25em; //500px
 
 /*-- -------------------------- -->
 <---     General Formatting     -->
