--- a/sass/_dark.scss
+++ b/sass/_dark.scss
@@ -104,12 +104,12 @@
 
         //Spacing
         width: 20rem;
-        padding: 0.5rem;
-        right: -70px;
+        padding: 0.8rem;
+        right: -74px;
         top: -17px;
 
         //Font Styling
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: 300;
 
         //Color Styling
@@ -143,12 +143,12 @@ body.dark-mode .dark-mode-button:after {
 
         //Spacing
         width: 20rem;
-        padding: 0.5rem;
-        right: -70px;
+        padding: 0.8rem;
+        right: -74px;
         top: -17px;
 
         //Font Styling
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: 300;
 
         //Color Styling
