--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -13,7 +13,6 @@
 
     //Color Styling
     background-color: $background-color-light;
-    color: $color-primary-dark;
 
     &-box {
         //Display
@@ -138,6 +137,11 @@
             //Animations
             transition: all 0.1s;
 
+            flex-grow: 1;
+            &:last-child {
+                flex-grow: 3;
+            }
+
             @media only screen and (max-width: $bp-medium) {
                 //Spacing
                 margin-right: 3rem;
@@ -148,7 +152,21 @@
                 margin: auto;
 
                 //Font Styling
-                font-size: 3rem;
+                font-size: 2.5rem;
+            }
+
+            &,
+            &:link,
+            &:visited {
+                //Color Styling
+                color: $color-primary-dark;
+            }
+
+            & li {
+                flex-grow: 1;
+                &:last-child {
+                    flex-grow: 3;
+                }
             }
         }
     }
